--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ __pycache__/
 .colcon/
 .vscode/
 cudnn-local-repo-ubuntu2404-9.8.0_1.0-1_amd64.deb
+cudnn-local-repo-ubuntu2404-9.8.0_1.0-1_amd64.deb
