--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ __pycache__/
 .vscode/
 cudnn-local-repo-ubuntu2404-9.8.0_1.0-1_amd64.deb
 cudnn-local-repo-ubuntu2404-9.8.0_1.0-1_amd64.deb
+cudnn-local-repo-ubuntu2404-9.8.0_1.0-1_amd64.deb
